fix regression of r35967, again support negative latitude or longitude, remove windows line encodings, fix warnings, use java 11, cleanup readmes
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36309 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4